[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Temple.gd" type="Script" id=1]
[ext_resource path="res://sprites/temple_outline.png" type="Texture" id=2]
[ext_resource path="res://sprites/temple_footprint.png" type="Texture" id=3]
[ext_resource path="res://sprites/temple_floor.png" type="Texture" id=4]

[node name="Temple" type="Node2D"]
script = ExtResource( 1 )

[node name="Floor" type="Sprite" parent="."]

[node name="Footprint" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="FloorPlan" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Outline" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="MouseoverArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MouseoverArea"]
polygon = PoolVector2Array( 0.610168, -161.361, 185.187, -0.749695, 1.45105, 98.4761, -189.012, -0.329254 )
[connection signal="input_event" from="MouseoverArea" to="." method="_on_MouseoverArea_input_event"]
[connection signal="mouse_entered" from="MouseoverArea" to="." method="_on_MouseoverArea_mouse_entered"]
[connection signal="mouse_exited" from="MouseoverArea" to="." method="_on_MouseoverArea_mouse_exited"]
